Fix: Nav option flickering

--- a/src/components/shared/nav/nav-links/nav-links.scss
+++ b/src/components/shared/nav/nav-links/nav-links.scss
@@ -20,7 +20,7 @@
 
 @media(hover: hover) and (pointer: fine) {
   .nav__link:hover {
-    margin-top: 1rem;
+    transform: translateY(1rem);
     color: $color__dark-pink;
   }
 }
